--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -374,6 +374,7 @@
     <string name="lbl_date_published_year">Anno di Pubblicazione</string>
     <string name="lbl_publisher">Editore</string>
     <string name="lbl_publishers">Editori</string>
+    <string name="pe_ui_context_menu_mode_by_size">Gli schermi più piccoli visualizzano i menu lunghi nella parte inferiore dello schermo e i menu brevi come menu contestuali classici.\\nGli schermi più grandi, come i tablet, utilizzano sempre i menu contestuali classici.</string>
     <string name="option_purge_files">Cancella i file</string>
     <string name="option_purge_image_cache">Cancella cache immagini</string>
     <string name="lbl_rating">Valutazione</string>
@@ -771,10 +772,9 @@
     <string name="pe_option_bottom_sheet">Sempre nella parte inferiore dello schermo</string>
     <string name="pt_ui_dialogs_mode">Finestre di dialogo</string>
     <string name="pe_ui_dialog_mode_classic">Sempre come finestra di dialogo classica</string>
-    <string name="pe_ui_dialog_mode_by_screen_size">Gli schermi più grandi (come i tablet) utilizzano le classiche finestre di dialogo, mentre gli schermi più piccoli visualizzano le finestre di dialogo nella parte inferiore dello schermo.</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Gli schermi più piccoli visualizzano le finestre di dialogo nella parte inferiore dello schermo.\\nGli schermi più grandi, come i tablet, utilizzano sempre le finestre di dialogo classiche.</string>
     <string name="pc_context_menus">Menu contestuali e di riga</string>
-    <string name="pe_context_menu_mode_classic">Sempre come un classico menu contestuale</string>
-    <string name="pe_context_menu_mode_by_size">I menu lunghi sono visualizzati nella parte inferiore dello schermo, mentre i menu brevi sono i classici menu contestuali.</string>
+    <string name="pe_ui_context_menu_mode_classic">Sempre come un classico menu contestuale</string>
     <string name="lbl_troubleshooting">Risoluzione dei problemi</string>
     <string name="pt_enable_extra_logging">Abilitare la registrazione aggiuntiva</string>
     <string name="lbl_troubleshooting_warning">Non abilitare le opzioni seguenti, a meno che non siano state esplicitamente richieste dallo sviluppatore dell\'applicazione.</string>
