--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1192,7 +1192,7 @@
     <!-- endregion -->
     <!-- region ========== Maintenance. -->
     <!-- Cleanup log and other temp files -->
-    <string name="pe_ui_context_menu_mode_by_size">Màn hình nhỏ hơn hiển thị các menu dài ở cuối màn hình và các menu ngắn dưới dạng menu ngữ cảnh cổ điển.\\nMàn hình lớn hơn, chẳng hạn như máy tính bảng, luôn sử dụng menu ngữ cảnh cổ điển.</string>
+    <string name="pe_ui_context_menu_mode_by_size">Màn hình nhỏ hơn hiển thị các menu dài ở cuối màn hình và các menu ngắn dưới dạng menu ngữ cảnh cổ điển.\nMàn hình lớn hơn, chẳng hạn như máy tính bảng, luôn sử dụng menu ngữ cảnh cổ điển.</string>
     <string name="option_purge_files">Dọn dẹp các tệp</string>
     <!-- param 1: file size; param 2: button text -->
     <string name="info_cleanup_files">Các tệp có thể xóa hiện đang sử dụng %1$s trên thẻ SD. Các tệp nhật ký và dữ liệu khác được lưu trên thẻ SD mỗi lần nâng cấp, khi bạn sao lưu cơ sở dữ liệu hoặc khi ứng dụng gặp sự cố. Nhấn vào nút bên dưới để xóa các tệp này khỏi thẻ SD của bạn. Nếu bạn gặp sự cố hoặc lỗi khác, trước tiên hãy cân nhắc sử dụng nút “%2$s”.</string>
@@ -1509,7 +1509,7 @@
     <string name="pt_dialog_and_menu_popup_tuning">Hộp thoại và Thực đơn</string>
     <string name="pe_option_bottom_sheet">Luôn ở cuối màn hình</string>
     <string name="pt_ui_dialogs_mode">Hộp thoại</string>
-    <string name="pe_ui_dialog_mode_by_screen_size">Màn hình nhỏ hơn hiển thị các hộp thoại ở cuối màn hình.\\nMàn hình lớn hơn, chẳng hạn như máy tính bảng, luôn sử dụng hộp thoại cổ điển.</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Màn hình nhỏ hơn hiển thị các hộp thoại ở cuối màn hình.\nMàn hình lớn hơn, chẳng hạn như máy tính bảng, luôn sử dụng hộp thoại cổ điển.</string>
     <string name="pc_context_menus">Thực đơn ngữ cảnh và hàng</string>
     <string name="pe_ui_context_menu_mode_classic">Luôn là một thực đơn ngữ cảnh cổ điển</string>
     <string name="lbl_troubleshooting">Xử lý sự cố</string>
