--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -491,7 +494,7 @@
     <string name="option_level_reset">Voorkeur expansieniveau</string>
     <string name="option_moving_covers_from_x_to_y">Verplaats alle covers van „%1$s” naar „%2$s”</string>
     <string name="option_purge_bedetheque_authors_cache">Wis de cache van Bedetheque Authors</string>
-    <string name="pe_ui_context_menu_mode_by_size">Kleinere schermen geven lange menu\'s weer onderaan het scherm en korte menu\'s als klassieke contextmenu\'s.\\nGrotere schermen, zoals tablets, gebruiken altijd klassieke contextmenu\'s.</string>
+    <string name="pe_ui_context_menu_mode_by_size">Kleinere schermen geven lange menu\'s weer onderaan het scherm en korte menu\'s als klassieke contextmenu\'s.\nGrotere schermen, zoals tablets, gebruiken altijd klassieke contextmenu\'s.</string>
     <string name="option_purge_files">Bestanden opschonen</string>
     <string name="option_purge_image_cache">Afbeeldingen cache wissen</string>
     <string name="option_rebuild_fts">Volledige tekst zoekgegevens opnieuw opbouwen</string>
@@ -765,8 +768,7 @@
     <string name="pe_option_bottom_sheet">Altijd onderaan het scherm</string>
     <string name="pt_ui_dialogs_mode">Dialogen</string>
     <string name="pe_ui_dialog_mode_classic">Altijd als een klassiek dialoogvenster</string>
-    <string name="pe_ui_dialog_mode_by_screen_size">Kleinere schermen geven de dialoogvensters onderaan het scherm weer.
-\nGrote schermen, zoals tablets, gebruiken altijd klassieke dialoogvensters.</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Kleinere schermen geven de dialoogvensters onderaan het scherm weer.\nGrote schermen, zoals tablets, gebruiken altijd klassieke dialoogvensters.</string>
     <string name="pc_context_menus">Context- en rijmenu\'s</string>
     <string name="pe_ui_context_menu_mode_classic">Altijd als een klassiek contextmenu</string>
     <string name="lbl_troubleshooting">Problemen oplossen</string>
