--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -390,7 +390,7 @@
     <string name="lbl_date_published_year">Rok publikacji</string>
     <string name="lbl_publisher">Wydawca</string>
     <string name="lbl_publishers">Wydawcy</string>
-    <string name="pe_ui_context_menu_mode_by_size">Mniejsze ekrany wyświetlają długie menu u dołu ekranu i krótkie menu jako klasyczne menu kontekstowe.\\nWiększe ekrany, takie jak tablety, zawsze używają klasycznych menu kontekstowych.</string>
+    <string name="pe_ui_context_menu_mode_by_size">Mniejsze ekrany wyświetlają długie menu u dołu ekranu i krótkie menu jako klasyczne menu kontekstowe.\nWiększe ekrany, takie jak tablety, zawsze używają klasycznych menu kontekstowych.</string>
     <string name="option_purge_files">Usuwanie plików</string>
     <string name="option_purge_image_cache">Wyczyść pamięć podręczną obrazu</string>
     <string name="lbl_rating">Ocena</string>
@@ -791,7 +791,7 @@
     <string name="pe_option_bottom_sheet">Zawsze w dolnej części ekranu</string>
     <string name="pt_ui_dialogs_mode">Dialogi</string>
     <string name="pe_ui_dialog_mode_classic">Zawsze jako klasyczne okno dialogowe</string>
-    <string name="pe_ui_dialog_mode_by_screen_size">Mniejsze ekrany wyświetlają okna dialogowe u dołu ekranu.\\nWiększe ekrany, takie jak tablety, zawsze używają klasycznych okien dialogowych.</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Mniejsze ekrany wyświetlają okna dialogowe u dołu ekranu.\nWiększe ekrany, takie jak tablety, zawsze używają klasycznych okien dialogowych.</string>
     <string name="pc_context_menus">Menu kontekstowe i wierszowe</string>
     <string name="pe_ui_context_menu_mode_classic">Zawsze jako klasyczne menu kontekstowe</string>
     <string name="lbl_troubleshooting">Rozwiązywanie problemów</string>
